network_policy/k8s_manifests/calico-policies/allow-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-policy
spec:
  podSelector:
    matchLabels:
      tier: frontend
  ingress:
    - from:
        - ipBlock: #AKS Subnet and ILB SourceIP
            cidr: 172.20.0.0/21
