network_policy/k8s_manifests/calico-policies/allow-nginx.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-policy
spec:
  podSelector:
    matchLabels:
      app: nginx-ingress
  ingress:
    - from:
        - ipBlock: #AKS Subnet and ILB SourceIP
            cidr: 172.20.0.0/21
        # - ipBlock:
        #     cidr: 172.20.8.0/24
        - ipBlock:
            cidr: 168.63.129.16/32
